# hansel

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  hansel  hansel.py  install.py  install.sh  pyproject.toml  test_hansel.py  test_hansel.sh
lang/: de.txt  en.txt  es.txt
