[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hansel-ai"
version = "0.1.0"
description = "Autonomous Terminal AI Bridge - Watches Claude CLI, detects questions, consults AI advisor, and auto-responds"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Gabo", email = "gabo@example.com"}
]
keywords = ["ai", "claude", "terminal", "automation", "chatgpt", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "twine>=4.0.0",
    "build>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/johanfleming/hansel"
Repository = "https://github.com/johanfleming/hansel"
Issues = "https://github.com/johanfleming/hansel/issues"

[project.scripts]
hansel = "hansel:main"

[tool.setuptools]
py-modules = ["hansel"]

[tool.setuptools.package-data]
"*" = ["lang/*.txt"]
